pyhead/zed/http11_parser.c
#line 1 "src/http11/http11_parser.rl"
/**
 *
 * Copyright (c) 2010, Zed A. Shaw and Mongrel2 Project Contributors.
 * All rights reserved.
 * 
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are
 * met:
 * 
 *     * Redistributions of source code must retain the above copyright
 *       notice, this list of conditions and the following disclaimer.
 * 
 *     * Redistributions in binary form must reproduce the above copyright
 *       notice, this list of conditions and the following disclaimer in the
 *       documentation and/or other materials provided with the distribution.
 * 
 *     * Neither the name of the Mongrel2 Project, Zed A. Shaw, nor the names
 *       of its contributors may be used to endorse or promote products
 *       derived from this software without specific prior written
 *       permission.
 * 
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS
 * IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
 * THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
 * PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
 * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
 * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR
 * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
 * NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
 * SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

#include "http11_parser.h"
#include <stdio.h>
#include <assert.h>
#include <stdlib.h>
#include <ctype.h>
#include <string.h>

#define LEN(AT, FPC) (FPC - buffer - parser->AT)
#define MARK(M,FPC) (parser->M = (FPC) - buffer)
#define PTR_TO(F) (buffer + parser->F)

/** Machine **/


#line 116 "src/http11/http11_parser.rl"


/** Data **/

#line 2 "src/http11/http11_parser.c"
static const int http_parser_start = 1;
static const int http_parser_first_final = 92;
static const int http_parser_error = 0;

static const int http_parser_en_main = 1;


#line 120 "src/http11/http11_parser.rl"

int http_parser_init(http_parser *parser) {
  int cs = 0;
  
#line 2 "src/http11/http11_parser.c"
    {
    cs = http_parser_start;
    }

#line 124 "src/http11/http11_parser.rl"
  parser->cs = cs;
  parser->body_start = 0;
  parser->content_len = 0;
  parser->mark = 0;
  parser->nread = 0;
  parser->field_len = 0;
  parser->field_start = 0;
  parser->socket_started = 0;
  parser->json_sent = 0;

  return(1);
}


/** exec **/
size_t http_parser_execute(http_parser *parser, const char *buffer, size_t len, size_t off)  {
  const char *p, *pe;
  int cs = parser->cs;

  assert(off <= len && "offset past end of buffer");

  p = buffer+off;
  pe = buffer+len;

  assert(pe - p == len - off && "pointers aren't same distance");

  
#line 2 "src/http11/http11_parser.c"
    {
    if ( p == pe )
        goto _test_eof;
    switch ( cs )
    {
case 1:
    switch( (*p) ) {
        case 36: goto tr0;
        case 60: goto st57;
        case 64: goto tr3;
        case 95: goto tr0;
    }
    if ( (*p) < 48 ) {
        if ( 45 <= (*p) && (*p) <= 46 )
            goto tr0;
    } else if ( (*p) > 57 ) {
        if ( 65 <= (*p) && (*p) <= 90 )
            goto tr0;
    } else
        goto tr0;
    goto st0;
st0:
cs = 0;
    goto _out;
tr0:
#line 52 "src/http11/http11_parser.rl"
    {MARK(mark, p); }
    goto st2;
st2:
    if ( ++p == pe )
        goto _test_eof2;
case 2:
#line 2 "src/http11/http11_parser.c"
    switch( (*p) ) {
        case 32: goto tr4;
        case 36: goto st38;
        case 95: goto st38;
    }
    if ( (*p) < 48 ) {
        if ( 45 <= (*p) && (*p) <= 46 )
            goto st38;
    } else if ( (*p) > 57 ) {
        if ( 65 <= (*p) && (*p) <= 90 )
            goto st38;
    } else
        goto st38;
    goto st0;
tr4:
#line 68 "src/http11/http11_parser.rl"
    { 
    if(parser->request_method != NULL) 
      parser->request_method(parser->data, PTR_TO(mark), LEN(mark, p));
  }
    goto st3;
st3:
    if ( ++p == pe )
        goto _test_eof3;
case 3:
#line 2 "src/http11/http11_parser.c"
    switch( (*p) ) {
        case 42: goto tr6;
        case 43: goto tr7;
        case 47: goto tr8;
        case 58: goto tr9;
    }
    if ( (*p) < 65 ) {
        if ( 45 <= (*p) && (*p) <= 57 )
            goto tr7;
    } else if ( (*p) > 90 ) {
        if ( 97 <= (*p) && (*p) <= 122 )
            goto tr7;
    } else
        goto tr7;
    goto st0;
tr6:
#line 52 "src/http11/http11_parser.rl"
    {MARK(mark, p); }
    goto st4;
st4:
    if ( ++p == pe )
        goto _test_eof4;
case 4:
#line 2 "src/http11/http11_parser.c"
    switch( (*p) ) {
        case 32: goto tr10;
        case 35: goto tr11;
    }
    goto st0;
tr10:
#line 73 "src/http11/http11_parser.rl"
    { 
    if(parser->request_uri != NULL)
      parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
  }
    goto st5;
tr33:
#line 52 "src/http11/http11_parser.rl"
    {MARK(mark, p); }
#line 78 "src/http11/http11_parser.rl"
    {
    if(parser->fragment != NULL)
      parser->fragment(parser->data, PTR_TO(mark), LEN(mark, p));
  }
    goto st5;
tr36:
#line 78 "src/http11/http11_parser.rl"
    {
    if(parser->fragment != NULL)
      parser->fragment(parser->data, PTR_TO(mark), LEN(mark, p));
  }
    goto st5;
tr44:
#line 94 "src/http11/http11_parser.rl"
    {
    if(parser->request_path != NULL)
      parser->request_path(parser->data, PTR_TO(mark), LEN(mark,p));
  }
#line 73 "src/http11/http11_parser.rl"
    { 
    if(parser->request_uri != NULL)
      parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
  }
    goto st5;
tr55:
#line 83 "src/http11/http11_parser.rl"
    {MARK(query_start, p); }
#line 84 "src/http11/http11_parser.rl"
    { 
    if(parser->query_string != NULL)
      parser->query_string(parser->data, PTR_TO(query_start), LEN(query_start, p));
  }
#line 73 "src/http11/http11_parser.rl"
    { 
    if(parser->request_uri != NULL)
      parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
  }
    goto st5;
tr59:
#line 84 "src/http11/http11_parser.rl"
    { 
    if(parser->query_string != NULL)
      parser->query_string(parser->data, PTR_TO(query_start), LEN(query_start, p));
  }
#line 73 "src/http11/http11_parser.rl"
    { 
    if(parser->request_uri != NULL)
      parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
  }
    goto st5;
st5:
    if ( ++p == pe )
        goto _test_eof5;
case 5:
#line 2 "src/http11/http11_parser.c"
    if ( (*p) == 72 )
        goto tr12;
    goto st0;
tr12:
#line 52 "src/http11/http11_parser.rl"
    {MARK(mark, p); }
    goto st6;
st6:
    if ( ++p == pe )
        goto _test_eof6;
case 6:
#line 2 "src/http11/http11_parser.c"
    if ( (*p) == 84 )
        goto st7;
    goto st0;
st7:
    if ( ++p == pe )
        goto _test_eof7;
case 7:
    if ( (*p) == 84 )
        goto st8;
    goto st0;
st8:
    if ( ++p == pe )
        goto _test_eof8;
case 8:
    if ( (*p) == 80 )
        goto st9;
    goto st0;
st9:
    if ( ++p == pe )
        goto _test_eof9;
case 9:
    if ( (*p) == 47 )
        goto st10;
    goto st0;
st10:
    if ( ++p == pe )
        goto _test_eof10;
case 10:
    if ( 48 <= (*p) && (*p) <= 57 )
        goto st11;
    goto st0;
st11:
    if ( ++p == pe )
        goto _test_eof11;
case 11:
    if ( (*p) == 46 )
        goto st12;
    if ( 48 <= (*p) && (*p) <= 57 )
        goto st11;
    goto st0;
st12:
    if ( ++p == pe )
        goto _test_eof12;
case 12:
    if ( 48 <= (*p) && (*p) <= 57 )
        goto st13;
    goto st0;
st13:
    if ( ++p == pe )
        goto _test_eof13;
case 13:
    if ( (*p) == 13 )
        goto tr20;
    if ( 48 <= (*p) && (*p) <= 57 )
        goto st13;
    goto st0;
tr20:
#line 89 "src/http11/http11_parser.rl"
    {   
    if(parser->http_version != NULL)
      parser->http_version(parser->data, PTR_TO(mark), LEN(mark, p));
  }
    goto st14;
tr28:
#line 60 "src/http11/http11_parser.rl"
    { MARK(mark, p); }
#line 62 "src/http11/http11_parser.rl"
    {
    if(parser->http_field != NULL) {
      parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
    }
  }
    goto st14;
tr31:
#line 62 "src/http11/http11_parser.rl"
    {
    if(parser->http_field != NULL) {
      parser->http_field(parser->data, PTR_TO(field_start), parser->field_len, PTR_TO(mark), LEN(mark, p));
    }
  }
    goto st14;
st14:
    if ( ++p == pe )
        goto _test_eof14;
case 14:
#line 2 "src/http11/http11_parser.c"
    if ( (*p) == 10 )
        goto st15;
    goto st0;
st15:
    if ( ++p == pe )
        goto _test_eof15;
case 15:
    switch( (*p) ) {
        case 13: goto st16;
        case 33: goto tr23;
        case 124: goto tr23;
        case 126: goto tr23;
    }
    if ( (*p) < 45 ) {
        if ( (*p) > 39 ) {
            if ( 42 <= (*p) && (*p) <= 43 )
                goto tr23;
        } else if ( (*p) >= 35 )
            goto tr23;
    } else if ( (*p) > 46 ) {
        if ( (*p) < 65 ) {
            if ( 48 <= (*p) && (*p) <= 57 )
                goto tr23;
        } else if ( (*p) > 90 ) {
            if ( 94 <= (*p) && (*p) <= 122 )
                goto tr23;
        } else
            goto tr23;
    } else
        goto tr23;
    goto st0;
st16:
    if ( ++p == pe )
        goto _test_eof16;
case 16:
    if ( (*p) == 10 )
        goto tr24;
    goto st0;
tr24:
#line 99 "src/http11/http11_parser.rl"
    { 
    parser->body_start = p - buffer + 1; 
    if(parser->header_done != NULL)
      parser->header_done(parser->data, p + 1, pe - p - 1);
    {p++; cs = 92; goto _out;}
  }
    goto st92;
tr102:
#line 106 "src/http11/http11_parser.rl"
    {
      parser->socket_started = 1;
  }
#line 99 "src/http11/http11_parser.rl"
    { 
    parser->body_start = p - buffer + 1; 
    if(parser->header_done != NULL)
      parser->header_done(parser->data, p + 1, pe - p - 1);
    {p++; cs = 92; goto _out;}
  }
    goto st92;
st92:
    if ( ++p == pe )
        goto _test_eof92;
case 92:
#line 2 "src/http11/http11_parser.c"
    goto st0;
tr23:
#line 55 "src/http11/http11_parser.rl"
    { MARK(field_start, p); }
    goto st17;
st17:
    if ( ++p == pe )
        goto _test_eof17;
case 17:
#line 2 "src/http11/http11_parser.c"
    switch( (*p) ) {
        case 33: goto st17;
        case 58: goto tr26;
        case 124: goto st17;
        case 126: goto st17;
    }
    if ( (*p) < 45 ) {
        if ( (*p) > 39 ) {
            if ( 42 <= (*p) && (*p) <= 43 )
                goto st17;
        } else if ( (*p) >= 35 )
            goto st17;
    } else if ( (*p) > 46 ) {
        if ( (*p) < 65 ) {
            if ( 48 <= (*p) && (*p) <= 57 )
                goto st17;
        } else if ( (*p) > 90 ) {
            if ( 94 <= (*p) && (*p) <= 122 )
                goto st17;
        } else
            goto st17;
    } else
        goto st17;
    goto st0;
tr26:
#line 56 "src/http11/http11_parser.rl"
    { 
    parser->field_len = LEN(field_start, p);
  }
    goto st18;
tr29:
#line 60 "src/http11/http11_parser.rl"
    { MARK(mark, p); }
    goto st18;
st18:
    if ( ++p == pe )
        goto _test_eof18;
case 18:
#line 2 "src/http11/http11_parser.c"
    switch( (*p) ) {
        case 13: goto tr28;
        case 32: goto tr29;
    }
    goto tr27;
tr27:
#line 60 "src/http11/http11_parser.rl"
    { MARK(mark, p); }
    goto st19;
st19:
    if ( ++p == pe )
        goto _test_eof19;
case 19:
#line 2 "src/http11/http11_parser.c"
    if ( (*p) == 13 )
        goto tr31;
    goto st19;
tr11:
#line 73 "src/http11/http11_parser.rl"
    { 
    if(parser->request_uri != NULL)
      parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
  }
    goto st20;
tr45:
#line 94 "src/http11/http11_parser.rl"
    {
    if(parser->request_path != NULL)
      parser->request_path(parser->data, PTR_TO(mark), LEN(mark,p));
  }
#line 73 "src/http11/http11_parser.rl"
    { 
    if(parser->request_uri != NULL)
      parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
  }
    goto st20;
tr56:
#line 83 "src/http11/http11_parser.rl"
    {MARK(query_start, p); }
#line 84 "src/http11/http11_parser.rl"
    { 
    if(parser->query_string != NULL)
      parser->query_string(parser->data, PTR_TO(query_start), LEN(query_start, p));
  }
#line 73 "src/http11/http11_parser.rl"
    { 
    if(parser->request_uri != NULL)
      parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
  }
    goto st20;
tr60:
#line 84 "src/http11/http11_parser.rl"
    { 
    if(parser->query_string != NULL)
      parser->query_string(parser->data, PTR_TO(query_start), LEN(query_start, p));
  }
#line 73 "src/http11/http11_parser.rl"
    { 
    if(parser->request_uri != NULL)
      parser->request_uri(parser->data, PTR_TO(mark), LEN(mark, p));
  }
    goto st20;
st20:
    if ( ++p == pe )
        goto _test_eof20;
case 20:
#line 2 "src/http11/http11_parser.c"
    switch( (*p) ) {
        case 32: goto tr33;
        case 37: goto tr34;
        case 60: goto st0;
        case 62: goto st0;
        case 127: goto st0;
    }
    if ( (*p) > 31 ) {
        if ( 34 <= (*p) && (*p) <= 35 )
            goto st0;
    } else if ( (*p) >= 0 )
        goto st0;
    goto tr32;
tr32:
#line 52 "src/http11/http11_parser.rl"
    {MARK(mark, p); }
    goto st21;
st21:
    if ( ++p == pe )
        goto _test_eof21;
case 21:
#line 2 "src/http11/http11_parser.c"
    switch( (*p) ) {
        case 32: goto tr36;
        case 37: goto st22;
        case 60: goto st0;
        case 62: goto st0;
        case 127: goto st0;
    }
    if ( (*p) > 31 ) {
        if ( 34 <= (*p) && (*p) <= 35 )
            goto st0;
    } else if ( (*p) >= 0 )
        goto st0;
    goto st21;
tr34:
#line 52 "src/http11/http11_parser.rl"
    {MARK(mark, p); }
    goto st22;
st22:
    if ( ++p == pe )
        goto _test_eof22;
case 22:
#line 2 "src/http11/http11_parser.c"
    if ( (*p) < 65 ) {
        if ( 48 <= (*p) && (*p) <= 57 )
            goto st23;
    } else if ( (*p) > 70 ) {
        if ( 97 <= (*p) && (*p) <= 102 )
            goto st23;
    } else
        goto st23;
    goto st0;
st23:
    if ( ++p == pe )
        goto _test_eof23;
case 23:
    if ( (*p) < 65 ) {
        if ( 48 <= (*p) && (*p) <= 57 )
            goto st21;
    } else if ( (*p) > 70 ) {
        if ( 97 <= (*p) && (*p) <= 102 )
            goto st21;
    } else
        goto st21;
    goto st0;
tr7:
#line 52 "src/http11/http11_parser.rl"
    {MARK(mark, p); }
    goto st24;
st24:
    if ( ++p == pe )
        goto _test_eof24;
case 24:
#line 2 "src/http11/http11_parser.c"
    switch( (*p) ) {
        case 43: goto st24;
        case 58: goto st25;
    }
    if ( (*p) < 48 ) {
        if ( 45 <= (*p) && (*p) <= 46 )
            goto st24;
    } else if ( (*p) > 57 ) {
        if ( (*p) > 90 ) {
            if ( 97 <= (*p) && (*p) <= 122 )
                goto st24;
        } else if ( (*p) >= 65 )
            goto st24;
    } else
        goto st24;
    goto st0;
tr9:
#line 52 "src/http11/http11_parser.rl"
    {MARK(mark, p); }
    goto st25;
st25:
    if ( ++p == pe )
        goto _test_eof25;
case 25:
#line 2 "src/http11/http11_parser.c"
    switch( (*p) ) {
        case 32: goto tr10;
        case 34: goto st0;
        case 35: goto tr11;
        case 37: goto st26;
        case 60: goto st0;
        case 62: goto st0;
        case 127: goto st0;
    }
    if ( 0 <= (*p) && (*p) <= 31 )
        goto st0;
    goto st25;
st26:
    if ( ++p == pe )
        goto _test_eof26;
case 26:
    if ( (*p) < 65 ) {
        if ( 48 <= (*p) && (*p) <= 57 )
            goto st27;
    } else if ( (*p) > 70 ) {
        if ( 97 <= (*p) && (*p) <= 102 )
            goto st27;
    } else
        goto st27;
    goto st0;
st27:
    if ( ++p == pe )
        goto _test_eof27;
case 27:
    if ( (*p) < 65 ) {
        if ( 48 <= (*p) && (*p) <= 57 )
            goto st25;
    } else if ( (*p) > 70 ) {
        if ( 97 <= (*p) && (*p) <= 102 )
            goto st25;
    } else
        goto st25;
    goto st0;
tr8:
#line 52 "src/http11/http11_parser.rl"
    {MARK(mark, p); }
    goto st28;
st28:
    if ( ++p == pe )
        goto _test_eof28;
case 28:
#line 2 "src/http11/http11_parser.c"
    switch( (*p) ) {
        case 32: goto tr44;
        case 34: goto st0;
        case 35: goto tr45;
        case 37: goto st29;
        case 59: goto tr47;
        case 60: goto st0;
        case 62: goto st0;
        case 63: goto tr48;
        case 127: goto st0;
    }
    if ( 0 <= (*p) && (*p) <= 31 )
        goto st0;
    goto st28;
st29:
    if ( ++p == pe )
        goto _test_eof29;
case 29:
    if ( (*p) < 65 ) {
        if ( 48 <= (*p) && (*p) <= 57 )
            goto st30;
    } else if ( (*p) > 70 ) {
        if ( 97 <= (*p) && (*p) <= 102 )
            goto st30;
    } else
        goto st30;
    goto st0;
st30:
    if ( ++p == pe )
        goto _test_eof30;
case 30:
    if ( (*p) < 65 ) {
        if ( 48 <= (*p) && (*p) <= 57 )
            goto st28;
    } else if ( (*p) > 70 ) {
        if ( 97 <= (*p) && (*p) <= 102 )
            goto st28;
    } else
        goto st28;
    goto st0;
tr47:
#line 94 "src/http11/http11_parser.rl"
    {
    if(parser->request_path != NULL)
      parser->request_path(parser->data, PTR_TO(mark), LEN(mark,p));
  }
    goto st31;
st31:
    if ( ++p == pe )
        goto _test_eof31;
case 31:
#line 2 "src/http11/http11_parser.c"
    switch( (*p) ) {
        case 32: goto tr10;
        case 34: goto st0;
        case 35: goto tr11;
        case 37: goto st32;
        case 60: goto st0;
        case 62: goto st0;
        case 63: goto st34;
        case 127: goto st0;
    }
    if ( 0 <= (*p) && (*p) <= 31 )
        goto st0;
    goto st31;
st32:
    if ( ++p == pe )
        goto _test_eof32;
case 32:
    if ( (*p) < 65 ) {
        if ( 48 <= (*p) && (*p) <= 57 )
            goto st33;
    } else if ( (*p) > 70 ) {
        if ( 97 <= (*p) && (*p) <= 102 )
            goto st33;
    } else
        goto st33;
    goto st0;
st33:
    if ( ++p == pe )
        goto _test_eof33;
case 33:
    if ( (*p) < 65 ) {
        if ( 48 <= (*p) && (*p) <= 57 )
            goto st31;
    } else if ( (*p) > 70 ) {
        if ( 97 <= (*p) && (*p) <= 102 )
            goto st31;
    } else
        goto st31;
    goto st0;
tr48:
#line 94 "src/http11/http11_parser.rl"
    {
    if(parser->request_path != NULL)
      parser->request_path(parser->data, PTR_TO(mark), LEN(mark,p));
  }
    goto st34;
st34:
    if ( ++p == pe )
        goto _test_eof34;
case 34:
#line 2 "src/http11/http11_parser.c"
    switch( (*p) ) {
        case 32: goto tr55;
        case 34: goto st0;
        case 35: goto tr56;
        case 37: goto tr57;
        case 60: goto st0;
        case 62: goto st0;
        case 127: goto st0;
    }
    if ( 0 <= (*p) && (*p) <= 31 )
        goto st0;
    goto tr54;
tr54:
#line 83 "src/http11/http11_parser.rl"
    {MARK(query_start, p); }
    goto st35;
st35:
    if ( ++p == pe )
        goto _test_eof35;
case 35:
#line 2 "src/http11/http11_parser.c"
    switch( (*p) ) {
        case 32: goto tr59;
        case 34: goto st0;
        case 35: goto tr60;
        case 37: goto st36;
        case 60: goto st0;
        case 62: goto st0;
        case 127: goto st0;
    }
    if ( 0 <= (*p) && (*p) <= 31 )
        goto st0;
    goto st35;
tr57:
#line 83 "src/http11/http11_parser.rl"
    {MARK(query_start, p); }
    goto st36;
st36:
    if ( ++p == pe )
        goto _test_eof36;
case 36:
#line 2 "src/http11/http11_parser.c"
    if ( (*p) < 65 ) {
        if ( 48 <= (*p) && (*p) <= 57 )
            goto st37;
    } else if ( (*p) > 70 ) {
        if ( 97 <= (*p) && (*p) <= 102 )
            goto st37;
    } else
        goto st37;
    goto st0;
st37:
    if ( ++p == pe )
        goto _test_eof37;
case 37:
    if ( (*p) < 65 ) {
        if ( 48 <= (*p) && (*p) <= 57 )
            goto st35;
    } else if ( (*p) > 70 ) {
        if ( 97 <= (*p) && (*p) <= 102 )
            goto st35;
    } else
        goto st35;
    goto st0;
st38:
    if ( ++p == pe )
        goto _test_eof38;
case 38:
    switch( (*p) ) {
        case 32: goto tr4;
        case 36: goto st39;
        case 95: goto st39;
    }
    if ( (*p) < 48 ) {
        if ( 45 <= (*p) && (*p) <= 46 )
            goto st39;
    } else if ( (*p) > 57 ) {
        if ( 65 <= (*p) && (*p) <= 90 )
            goto st39;
    } else
        goto st39;
    goto st0;
st39:
    if ( ++p == pe )
        goto _test_eof39;
case 39:
    switch( (*p) ) {
        case 32: goto tr4;
        case 36: goto st40;
        case 95: goto st40;
    }
    if ( (*p) < 48 ) {
        if ( 45 <= (*p) && (*p) <= 46 )
            goto st40;
    } else if ( (*p) > 57 ) {
        if ( 65 <= (*p) && (*p) <= 90 )
            goto st40;
    } else
        goto st40;
    goto st0;
st40:
    if ( ++p == pe )
        goto _test_eof40;
case 40:
    switch( (*p) ) {
        case 32: goto tr4;
        case 36: goto st41;
        case 95: goto st41;
    }
    if ( (*p) < 48 ) {
        if ( 45 <= (*p) && (*p) <= 46 )
            goto st41;
    } else if ( (*p) > 57 ) {
        if ( 65 <= (*p) && (*p) <= 90 )
            goto st41;
    } else
        goto st41;
    goto st0;
st41:
    if ( ++p == pe )
        goto _test_eof41;
case 41:
    switch( (*p) ) {
        case 32: goto tr4;
        case 36: goto st42;
        case 95: goto st42;
    }
    if ( (*p) < 48 ) {
        if ( 45 <= (*p) && (*p) <= 46 )
            goto st42;
    } else if ( (*p) > 57 ) {
        if ( 65 <= (*p) && (*p) <= 90 )
            goto st42;
    } else
        goto st42;
    goto st0;
st42:
    if ( ++p == pe )
        goto _test_eof42;
case 42:
    switch( (*p) ) {
        case 32: goto tr4;
        case 36: goto st43;
        case 95: goto st43;
    }
    if ( (*p) < 48 ) {
        if ( 45 <= (*p) && (*p) <= 46 )
            goto st43;
    } else if ( (*p) > 57 ) {
        if ( 65 <= (*p) && (*p) <= 90 )
            goto st43;
    } else
        goto st43;
    goto st0;
st43:
    if ( ++p == pe )
        goto _test_eof43;
case 43:
    switch( (*p) ) {
        case 32: goto tr4;
        case 36: goto st44;
        case 95: goto st44;
    }
    if ( (*p) < 48 ) {
        if ( 45 <= (*p) && (*p) <= 46 )
            goto st44;
    } else if ( (*p) > 57 ) {
        if ( 65 <= (*p) && (*p) <= 90 )
            goto st44;
    } else
        goto st44;
    goto st0;
st44:
    if ( ++p == pe )
        goto _test_eof44;
case 44:
    switch( (*p) ) {
        case 32: goto tr4;
        case 36: goto st45;
        case 95: goto st45;
    }
    if ( (*p) < 48 ) {
        if ( 45 <= (*p) && (*p) <= 46 )
            goto st45;
    } else if ( (*p) > 57 ) {
        if ( 65 <= (*p) && (*p) <= 90 )
            goto st45;
    } else
        goto st45;
    goto st0;
st45:
    if ( ++p == pe )
        goto _test_eof45;
case 45:
    switch( (*p) ) {
        case 32: goto tr4;
        case 36: goto st46;
        case 95: goto st46;
    }
    if ( (*p) < 48 ) {
        if ( 45 <= (*p) && (*p) <= 46 )
            goto st46;
    } else if ( (*p) > 57 ) {
        if ( 65 <= (*p) && (*p) <= 90 )
            goto st46;
    } else
        goto st46;
    goto st0;
st46:
    if ( ++p == pe )
        goto _test_eof46;
case 46:
    switch( (*p) ) {
        case 32: goto tr4;
        case 36: goto st47;
        case 95: goto st47;
    }
    if ( (*p) < 48 ) {
        if ( 45 <= (*p) && (*p) <= 46 )
            goto st47;
    } else if ( (*p) > 57 ) {
        if ( 65 <= (*p) && (*p) <= 90 )
            goto st47;
    } else
        goto st47;
    goto st0;
st47:
    if ( ++p == pe )
        goto _test_eof47;
case 47:
    switch( (*p) ) {
        case 32: goto tr4;
        case 36: goto st48;
        case 95: goto st48;
    }
    if ( (*p) < 48 ) {
        if ( 45 <= (*p) && (*p) <= 46 )
            goto st48;
    } else if ( (*p) > 57 ) {
        if ( 65 <= (*p) && (*p) <= 90 )
            goto st48;
    } else
        goto st48;
    goto st0;
st48:
    if ( ++p == pe )
        goto _test_eof48;
case 48:
    switch( (*p) ) {
        case 32: goto tr4;
        case 36: goto st49;
